## $Id$
AUTOMAKE_OPTIONS=foreign no-dependencies

noinst_LIBRARIES = libspo.a

libspo_a_SOURCES = \
spo_alert_arubaaction.c spo_alert_arubaaction.h \
spo_alert_bro.c spo_alert_bro.h \
spo_alert_cef.c spo_alert_cef.h \
spo_alert_fast.c spo_alert_fast.h \
spo_alert_full.c spo_alert_full.h \
spo_alert_prelude.c spo_alert_prelude.h \
spo_alert_syslog.c spo_alert_syslog.h \
spo_alert_test.c spo_alert_test.h \
spo_alert_unixsock.c spo_alert_unixsock.h \
spo_common.c spo_common.h \
spo_csv.c spo_csv.h \
spo_log_ascii.c spo_log_ascii.h \
spo_log_null.c spo_log_null.h \
spo_log_tcpdump.c spo_log_tcpdump.h \
spo_platypus.c spo_platypus.h \
spo_sguil.c spo_sguil.h \
spo_database.c spo_database.h

INCLUDES = -I.. -I ../sfutil
