## $Id$
AUTOMAKE_OPTIONS=foreign no-dependencies

noinst_LIBRARIES = libspo.a

libspo_a_SOURCES = \
spo_alert_arubaaction.c spo_alert_arubaaction.h \
spo_alert_bro.c spo_alert_bro.h \
spo_alert_cef.c spo_alert_cef.h \
spo_alert_csv.c spo_alert_csv.h \
spo_alert_fast.c spo_alert_fast.h \
spo_alert_full.c spo_alert_full.h \
spo_alert_fwsam.c spo_alert_fwsam.h \
spo_alert_json.c spo_alert_json.h \
spo_alert_prelude.c spo_alert_prelude.h \
spo_alert_syslog.c spo_alert_syslog.h \
spo_alert_test.c spo_alert_test.h \
spo_alert_unixsock.c spo_alert_unixsock.h \
spo_common.c spo_common.h \
spo_log_ascii.c spo_log_ascii.h \
spo_log_null.c spo_log_null.h \
spo_log_tcpdump.c spo_log_tcpdump.h \
spo_sguil.c spo_sguil.h \
spo_echidna.c spo_echidna.h \
spo_syslog_full.c spo_syslog.full.h \
spo_database.c spo_database.h \
spo_database_cache.c spo_database_cache.h

INCLUDES = -I.. -I ../sfutil
