AUTOMAKE_OPTIONS=foreign no-dependencies

noinst_LIBRARIES = libsfutil.a

libsfutil_a_SOURCES = bitop.h \
    getopt_long.c getopt.h getopt1.h \
    sfhashfcn.h \
    sfmemcap.c sfmemcap.h \
    sfprimetable.c sfprimetable.h \
    sfxhash.c sfxhash.h \
    sf_ip.c sf_ip.h \
    sf_iph.c sf_iph.h \
    sf_ipvar.c sf_ipvar.h \
    sf_textlog.c sf_textlog.h \
    sf_kafka.c sf_kafka.h \
    sf_vartable.c sf_vartable.h


INCLUDES = -I..
